--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 scale=1.0">
 
 <title>Implementação</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="STYLES/IMG/header.css">
 </head>
 <body>
 <header class="cabecalho">
